--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   Module::Signature: 0
   Test::MockTime: 0
   Test::More: 0
+  Time::Piece: 1.12
 configure_requires:
   Module::Build: 0.36
 generated_by: 'Module::Build version 0.3601'
@@ -19,13 +20,13 @@ name: Module-Starter-Plugin-CGIApp
 provides:
   Module::Starter::Plugin::CGIApp:
     file: lib/Module/Starter/Plugin/CGIApp.pm
-    version: 0.20
+    version: 0.21
 requires:
   HTML::Template: 0
   Module::Starter: 0
-  perl: 5.006
+  perl: 5.008
 resources:
   homepage: http://jaldhar.github.com/Module-Starter-Plugin-CGIApp/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/jaldhar/Module-Starter-Plugin-CGIApp
-version: 0.20
+version: 0.21
